--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: todos-webflux
 logging:
   level:
-    io.corbs: DEBUG
+    io.corbs: INFO
 server:
   port: 8010
 management:
@@ -18,4 +18,4 @@ eureka:
       defaultZone: 'http://localhost:8761/eureka/'
 todos:
   api:
-    limit: 5
+    limit: 65568
