--- a/vars.yml
+++ b/vars.yml
@@ -2,8 +2,8 @@ app:
   name: todos-webflux
   artifact: target/todos-webflux-1.0.0.SNAP.jar
   memory: 1G
-  route: todos-webflux.cfapps.io
-env-key-1: EUREKA_CLIENT_SERVICE-URL_DEFAULTZONE
-env-val-1: http://cloud-index.cfapps.io/eureka/
-env-key-2: TODOS_API_LIMIT
-env-val-2: 512
+  route: todos-webflux.apps.pcf.corbscloud.io
+env-key-1: TODOS_API_LIMIT
+env-val-1: 256
+env-key-1: EUREKA_CLIENT_ENABLED
+env-val-1: false
