--- a/pipeline.yml
+++ b/pipeline.yml
@@ -5,12 +5,26 @@ resources:
   source:
     uri: https://github.com/corbtastik/todos-webflux.git
     branch: master
-
+- name: version
+  type: semver
+  source:
+    driver: git
+    uri: git@github.com:corbtastik/todos-webflux.git
+    branch: master
+    file: version
+    private_key: ((private-key-github))
+- name: artifact-release
+  type: github-release
+  source:
+    owner: corbtastik
+    repository: todos-webflux
+    access_token: 62d0c5acd9e77c8d8670d36696adbf9e27d95ba6
 jobs:
 - name: build
-  public: true
   plan:
   - get: source-code
     trigger: true
+  - get: version
+    params: {bump: patch}
   - task: build
     file: source-code/ci/build.yml
