initial_version var

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -11,14 +11,15 @@ resources:
     driver: git
     uri: git@github.com:corbtastik/todos-webflux.git
     branch: master
+    initial_version: 1.0.0.SNAPSHOT
     file: version
     private_key: ((private-key-github))
-- name: artifact-release
-  type: github-release
-  source:
-    owner: corbtastik
-    repository: todos-webflux
-    access_token: ((access-token-github))
+#- name: artifact-release
+#  type: github-release
+#  source:
+#    owner: corbtastik
+#    repository: todos-webflux
+#    access_token: ((access-token-github))
 jobs:
 - name: build
   plan:
