--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.corbs</groupId>
 	<artifactId>todos-webflux</artifactId>
-	<version>1.0.0.HI</version>
+	<version>1.0.0.SNAP</version>
 	<packaging>jar</packaging>
 
 	<name>todos-webflux</name>
