spring clean up

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,12 +1,9 @@
 ---
 applications:
-- name: ((app.name))
-  memory: ((app.memory))
-  routes:
-  - route: ((app.route))
-  path: ((app.artifact))
-  buildpack: java_buildpack
-  env:
-    ((env-key-1)): ((env-val-1))
-    ((env-key-2)): ((env-val-2))
+  - name: todos-webflux
+    memory: 1G
+    path: target/todos-webflux-1.0.0.SNAP.jar
+    buildpack: java_buildpack_offline
+    env:
+      TODOS_API_LIMIT: 1024
 
