--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -4,6 +4,7 @@ resource_types:
     type: docker-image
     source:
       repository: springio/artifactory-resource
+      tag: 0.0.10
 
 resources:
   - name: code-repo
@@ -64,7 +65,7 @@ jobs:
       - task: unit-test
         file: code-repo/ci/tasks/unit-test.yml
 
-  - name: build-artifact
+  - name: build-and-publish
     serial: true
     plan:
       - get: code-repo
@@ -79,16 +80,16 @@ jobs:
       - put: version
         params: { file: version/version }
 
-#  - name: integration-test
+#  - name: deploy-to-test
 #    serial: true
 #    plan:
 #      - get: candidate-release
 #        trigger: true
-#        passed: [ build-artifact ]
+#        passed: [ build-and-publish ]
 #      - get: code-repo
-#        passed: [ build-artifact ]
+#        passed: [ build-and-publish ]
 #      - get: version
-#        passed: [ build-artifact ]
+#        passed: [ build-and-publish ]
 #      - task: prepare-integration
 #        file: code-repo/ci/tasks/prepare-integration.yml
 #        params:
