--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.todos</groupId>
 	<artifactId>todos-webflux</artifactId>
-	<version>1.0.0.SNAP</version>
+	<version>1.0.0-rc1</version>
 	<packaging>jar</packaging>
 
 	<name>todos-webflux</name>
@@ -72,6 +72,13 @@
         </dependencies>
     </dependencyManagement>
 
+    <distributionManagement>
+        <repository>
+            <id>${distribution.management.release.id}</id>
+            <url>${distribution.management.release.url}</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <!-- Maven plugin that can package the project as an executable jar  -->
@@ -89,24 +96,5 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>spring-repository</id>
-            <name>Spring Repository</name>
-            <url>https://repo.spring.io/release</url>
-        </repository>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-        </repository>
-        <repository>
-            <id>spring-snapshots</id>
-            <name>Spring Snapshots</name>
-            <url>https://repo.spring.io/snapshot</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+
 </project>
