--- a/ci/tasks/build-and-publish.yml
+++ b/ci/tasks/build-and-publish.yml
@@ -8,9 +8,11 @@ image_resource:
     tag: '8-jdk-alpine'
 
 params:
-  - GROUP_ID:
-  - ARTIFACT_ID:
-  - ROUTE:
+  - REPO_WITH_BINARIES:
+  - REPO_WITH_BINARIES_FOR_UPLOAD:
+  - M2_SETTINGS_REPO_ID:
+  - M2_SETTINGS_REPO_USERNAME:
+  - M2_SETTINGS_REPO_PASSWORD:
 
 inputs:
   - name: code-repo
