--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -56,14 +56,14 @@ resources:
       organization: ((cf-test-org))
       space: ((cf-test-space))
 
-#  - name: cf-prod
-#    type: cf
-#    source:
-#      api: ((cf-prod-api))
-#      username: ((cf-prod-username))
-#      password: ((cf-prod-password))
-#      organization: ((cf-prod-org))
-#      space: ((cf-prod-space))
+  - name: cf-prod
+    type: cf
+    source:
+      api: ((cf-prod-api))
+      username: ((cf-prod-username))
+      password: ((cf-prod-password))
+      organization: ((cf-prod-org))
+      space: ((cf-prod-space))
 
 jobs:
   - name: unit-test
@@ -113,22 +113,45 @@ jobs:
         params:
           manifest: deployment/manifest.yml
 
-#  - name: ship-it
-#    serial_groups: [ version ]
-#    plan:
-#      - get: candidate-release
-#        passed: [ integration-test ]
-#      - get: pcfdemo
-#        passed: [ integration-test ]
-#      - get: version
-#        params: { bump: final }
-#      - task: prepare-final
-#        file: pcfdemo/ci/tasks/prepare-final.yml
-#      - put: final-release
-#        params: { file: prepare-final/pcf-demo-*.war }
-#      - put: version
-#        params: { file: version/number }
-#
+  - name: deploy-to-prod
+    serial: true
+    plan:
+      - get: code-repo
+        passed: [ deploy-to-test ]
+      - get: ci-scripts
+      - get: version
+        passed: [ deploy-to-test ]
+      - task: prepare-cf-push
+        file: ci-scripts/ci/tasks/prepare-cf-push.yml
+        params:
+          GROUP_ID: ((code-repo-group-id))
+          ARTIFACT_ID: ((code-repo-artifact-id))
+          ROUTE: ((cf-prod-route))
+          ARTIFACTORY_URL: ((repo-with-binaries))
+      - put: cf-prod
+        params:
+          manifest: deployment/manifest.yml
+
+  - name: prod-complete
+    serial: true
+    plan:
+      - get: code-repo
+        passed: [ deploy-to-prod ]
+      - get: ci-scripts
+        passed: [ deploy-to-prod ]
+      - get: version
+        params: { bump: final }
+      - task: build-and-publish
+        file: ci-scripts/ci/tasks/build-and-publish.yml
+        params:
+          REPO_WITH_BINARIES: ((repo-with-binaries))
+          REPO_WITH_BINARIES_FOR_UPLOAD: ((repo-with-binaries-for-upload))
+          M2_SETTINGS_REPO_ID: ((m2-settings-repo-id))
+          M2_SETTINGS_REPO_USERNAME: ((m2-settings-repo-username))
+          M2_SETTINGS_REPO_PASSWORD: ((m2-settings-repo-password))
+      - put: version
+        params: { file: version/version }
+
 #  - name: major
 #    serial_groups: [ version ]
 #    plan:
