--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -15,6 +15,13 @@ resources:
       ignore_paths: ["ci"]
       private_key: ((code-repo-private-key))
 
+  - name: code-repo-release
+    type: github-release
+    source:
+      owner: ((code-repo-owner))
+      repository: ((code-repo-repository))
+      access_token: ((code-repo-access-token))
+
   - name: ci-scripts
     type: git
     source:
@@ -93,11 +100,11 @@ jobs:
           M2_SETTINGS_REPO_USERNAME: ((m2-settings-repo-username))
           M2_SETTINGS_REPO_PASSWORD: ((m2-settings-repo-password))
       - put: version
-        params: { file: results/tag.txt }
+        params: { file: version/version }
       - put: code-repo
         params:
           repository: code-repo
-          tag: version/version
+          tag: results/tag.txt
           only_tag: true
 
   - name: deploy-to-test
@@ -108,7 +115,6 @@ jobs:
         passed: [ build-and-publish ]
       - get: ci-scripts
       - get: version
-        passed: [ build-and-publish ]
       - task: prepare-cf-push
         file: ci-scripts/ci/tasks/prepare-cf-push.yml
         params:
@@ -125,6 +131,38 @@ jobs:
           repository: code-repo
           tag: deployment/tag.txt
           only_tag: true
+
+  - name: mark-as-release
+    serial: true
+    plan:
+      - get: code-repo
+        passed: [ deploy-to-test ]
+      - get: ci-scripts
+      - get: version
+        params: { bump: final }
+      - task: prepare-release
+        file: ci-scripts/ci/tasks/prepare-release.yml
+      - task: build-and-publish
+        file: ci-scripts/ci/tasks/build-and-publish.yml
+        params:
+          REPO_WITH_BINARIES_FOR_UPLOAD: ((repo-with-binaries-for-upload))
+          M2_SETTINGS_REPO_ID: ((m2-settings-repo-id))
+          M2_SETTINGS_REPO_USERNAME: ((m2-settings-repo-username))
+          M2_SETTINGS_REPO_PASSWORD: ((m2-settings-repo-password))
+      - put: version
+        params: { file: version/version }
+      - put: code-repo-tag
+        resource: code-repo
+        params:
+          repository: code-repo
+          tag: results/tag.txt
+          only_tag: true
+      - put: code-repo-release
+        params:
+          name: results/release-name.txt
+          tag: results/tag.txt
+          globs:
+            - results/code-repo-*.tgz
 
   - name: deploy-to-prod
     serial: true
