Updates CI Scripts

--- a/ci/tasks/prepare-release.yml
+++ b/ci/tasks/prepare-release.yml
@@ -13,7 +13,7 @@ inputs:
   - name: version
 
 outputs:
-  - name: results
+  - name: release-results
 
 run:
   path: ci-scripts/ci/tasks/prepare-release.sh
