--- a/ci/tasks/unit-test.yml
+++ b/ci/tasks/unit-test.yml
@@ -4,8 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: openjdk
-    tag: '8-jdk-alpine'
+    repository: cloudpipelines/pipeline-base
+    tag: latest
 
 inputs:
   - name: code-repo
