--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,5 +1,15 @@
 ---
+resource_types:
+  - name: meta
+    type: docker-image
+    source:
+      repository: swce/metadata-resource
+
 resources:
+
+  - name: meta
+    type: meta
+
   - name: code-repo
     type: git
     source:
@@ -71,11 +81,11 @@ jobs:
       - get: ci-scripts
       - get: version
         params: { pre: rc }
+      - get: meta
       - task: build-and-publish
         file: ci-scripts/ci/tasks/build-and-publish.yml
         params:
-          REPO_WITH_BINARIES_FOR_UPLOAD: ((repo-with-binaries-for-upload))
-          M2_SETTINGS_REPO_ID: ((m2-settings-repo-id))
+          REPO_CONTEXT_URL: ((repo-context-url))
           M2_SETTINGS_REPO_USERNAME: ((m2-settings-repo-username))
           M2_SETTINGS_REPO_PASSWORD: ((m2-settings-repo-password))
       - put: version
@@ -101,7 +111,7 @@ jobs:
           GROUP_ID: ((code-repo-group-id))
           ARTIFACT_ID: ((code-repo-artifact-id))
           ROUTE: ((cf-test-route))
-          ARTIFACTORY_URL: ((repo-with-binaries-for-upload))
+          ARTIFACTORY_URL: ((repo-context-url))/((artifactory-repo))
           DEPLOY_TARGET_LABEL: test
       - put: cf-test
         params:
@@ -121,13 +131,13 @@ jobs:
       - get: ci-scripts
       - get: version
         params: { bump: final }
+      - get: meta
       - task: prepare-release
         file: ci-scripts/ci/tasks/prepare-release.yml
       - task: build-and-publish
         file: ci-scripts/ci/tasks/build-and-publish.yml
         params:
-          REPO_WITH_BINARIES_FOR_UPLOAD: ((repo-with-binaries-for-upload))
-          M2_SETTINGS_REPO_ID: ((m2-settings-repo-id))
+          REPO_CONTEXT_URL: ((repo-context-url))
           M2_SETTINGS_REPO_USERNAME: ((m2-settings-repo-username))
           M2_SETTINGS_REPO_PASSWORD: ((m2-settings-repo-password))
       - put: version
@@ -168,7 +178,7 @@ jobs:
           GROUP_ID: ((code-repo-group-id))
           ARTIFACT_ID: ((code-repo-artifact-id))
           ROUTE: ((cf-prod-route))
-          ARTIFACTORY_URL: ((repo-with-binaries-for-upload))
+          ARTIFACTORY_URL: ((repo-context-url))/((artifactory-repo))
           DEPLOY_TARGET_LABEL: prod
       - put: cf-prod
         params:
@@ -194,7 +204,7 @@ jobs:
           GROUP_ID: ((code-repo-group-id))
           ARTIFACT_ID: ((code-repo-artifact-id))
           ROUTE: ((cf-test-route))
-          ARTIFACTORY_URL: ((repo-with-binaries-for-upload))
+          ARTIFACTORY_URL: ((repo-context-url))/((artifactory-repo))
           DEPLOY_TARGET_LABEL: test
       - put: cf-test
         params:
