--- a/pom.xml
+++ b/pom.xml
@@ -72,13 +72,6 @@
         </dependencies>
     </dependencyManagement>
 
-    <distributionManagement>
-        <repository>
-            <id>${distribution.management.release.id}</id>
-            <url>${distribution.management.release.url}</url>
-        </repository>
-    </distributionManagement>
-
     <build>
         <plugins>
             <!-- Maven plugin that can package the project as an executable jar  -->
@@ -93,8 +86,41 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.jfrog.buildinfo</groupId>
+                <artifactId>artifactory-maven-plugin</artifactId>
+                <version>2.7.0</version>
+                <inherited>false</inherited>
+                <executions>
+                    <execution>
+                        <id>build-info</id>
+                        <goals>
+                            <goal>publish</goal>
+                        </goals>
+                        <configuration>
+                            <publisher>
+                                <contextUrl>{{REPO_CONTEXT_URL}}</contextUrl>
+                                <username>{{M2_SETTINGS_REPO_USERNAME}}</username>
+                                <password>{{M2_SETTINGS_REPO_PASSWORD}}</password>
+                                <repoKey>libs-release-local</repoKey>
+                                <snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
+                            </publisher>
+                            <buildInfo>
+                                <buildNumber>{{BUILD_ID}}</buildNumber>
+                                <buildUrl>{{BUILD_URI}}</buildUrl>
+                            </buildInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-plugins-repository</id>
+            <url>https://repo.spring.io/plugins-release</url>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
