--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -111,7 +111,7 @@ jobs:
       - put: artifactory
         params:
           repo: libs-snapshot-local
-          folder: local-deployment
+          folder: distribution-repository
           build_uri: "https://ci.lab.winterfell.live/teams/${BUILD_TEAM_NAME}/pipelines/${BUILD_PIPELINE_NAME}/jobs/${BUILD_JOB_NAME}/builds/${BUILD_NAME}"
           build_number: "${BUILD_PIPELINE_NAME}-${BUILD_JOB_NAME}-${BUILD_NAME}"
 
